fix dark mode II

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -865,6 +865,12 @@ span.MuiBottomNavigationAction-label{
 
 
 
+.switch{
+    margin-top: 222px;
+}
+
+
+
 
 
 
